# hr_assitant_v2

./: .gitignore  README.md  agent.py  app.py  config.py  guardrails_local.py  helper_prompts.yaml  hr_operation_result.py  logging_setup.py  main.py  mcp_client.py  pyproject.toml  rag.py  timesheet_operations.py  training_operations.py  transport_operations.py  transscript.txt
assets/: custom.css
data/policies/: casual_leave.md  leave_overview.md  maternity_leave.md
