[project]
name = "hr-assitant-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.11.0",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "httpx>=0.28.1",
    "langchain>=1.0.8",
    "langchain-experimental>=0.0.58",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langsmith>=0.4.46",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
]
